# BB-Backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
entity/src/: expenses.rs  expenses_categories.rs  mod.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231009_060548_create_user.rs  m20231009_080258_create_expenses_categories.rs  m20231009_080306_create_expenses.rs  m20231011_062810_seed_expense_categories.rs
src/: main.rs
src/handlers/: auth.rs  expenses.rs  user.rs
src/models/: expenses.rs  mod.rs  user.rs
src/models/api/: dashboard.rs
src/routes/: auth.rs  expenses.rs  mod.rs  user.rs
src/utils/: api_error.rs  constants.rs  cron.rs  database.rs  guards.rs  jwt.rs  log.rs  mod.rs
src/utils/mapper/: api_error.rs  api_success.rs  mod.rs
tests/: testing.rs
